--- a/index.htm
+++ b/index.htm
@@ -5,15 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="http://code.jquery.com/jquery-latest.min.js"
             type="text/javascript"></script>
-    <script>
-        $(document).ready(function() {
-            $('input[type="submit"]').click(function(e) {
-                e.preventDefault();
-
-                // your code here
-            });
-        });
-    </script>
+    <script src="reference/script.js"></script>
 </head>
 
 <body>
